LIST OF CHANGES
---------------

 - require minimum version 5.10 for perl
 - add study analysis configuration accessor
 - simpler name for the archival daemon module
 - parent class for pipeline daemons
 - consistent behaviour of the archival and analysis daemons
   when LIMs data are not available in the ml warehouse and
   the run is not a QC run, the run is skipped
 - the pipeline daemons define the type of the pipeline to run
   (default, gclp, qc) and set appropriate flag for the pipeline
   script (formerly the function list was specified)
 - Log::Log4perl logger is used in pipeline daemons
 - cached samplesheet generation - use ml warehouse for all
   runs except QC runs, for which the old warehouse is still used

release 49.8
 - seq-alignment now uses bwa_aln_se for single read runs
 - disable log archival pending enhancements

release 49.7
 - seq-alignment - P4 and new bwa for older chemistries & forcing mem for alt references
 - bug fix after passing RG paramater to illumina2bam: change SplitBamByReadGroup options:
     do not set OUTPUT_COMMON_RG_HEAD_TO_TRIM, strip last component (runid_lane) from
     OUTPUT_PREFIX
 - use threading for bam and cram creation in seq_alignment
   references and GCLP
 - add attribute "gclp" common to analysis and archival scripts
 - function list config files always contain pipeline module name e.g. central

release 49.6
 - pass RG paramater to illumina2bam
 - add archive::file::logs

release 49.5
 - correctly determine path to SplitBamByChromosomes.jar
 - drop redundant do_markduplicates and not_strip_bam_tag options from args list
   of the old-style bam alignment script
 - factor out generation of bam_flagstats metics into a method
 - call new bam_flagstats execute method instead of invoking individual parsers explicitly -
   forward compatibility
 - npg_pipeline::cache - reuse_cache_only option added RT#486264
 - check for an inline index when calculating index_length

release 49.4