@@ -1,7 +1,7 @@
 use strict;
 use warnings;
 use English qw{-no_match_vars};
-use Test::More tests => 6;
+use Test::More tests => 12;
 use Test::Exception;
 use t::util;
 use Cwd;
@@ -52,8 +52,25 @@ my $bin = $curdir . q[/bin];
   my $tmp_dir = $util->temp_directory();
   local $ENV{TEST_DIR} = $tmp_dir;
  
-  lives_ok { diag qx{perl $bin/npg_pipeline_post_qc_review --runfolder_path $tmp_dir/nfs/sf45/IL2/analysis/123456_IL2_1234}; } q{ran bin/npg_pipeline_post_qc_review};
+  lives_ok { diag qx{
+    perl $bin/npg_pipeline_post_qc_review --runfolder_path $tmp_dir/nfs/sf45/IL2/analysis/123456_IL2_1234};}
+    q{ran bin/npg_pipeline_post_qc_review};
   ok(!$CHILD_ERROR, qq{Return code of $CHILD_ERROR});
+
+  lives_ok { diag qx{
+    perl $bin/npg_pipeline_post_qc_review --runfolder_path $tmp_dir/nfs/sf45/IL2/analysis/123456_IL2_1234  --gclp}; }
+    q{ran bin/npg_pipeline_post_qc_review with gclp flag};
+  ok(!$CHILD_ERROR, qq{Return code of $CHILD_ERROR});
+
+  lives_ok { diag qx{
+    perl $bin/npg_pipeline_post_qc_review --runfolder_path $tmp_dir/nfs/sf45/IL2/analysis/123456_IL2_1234  --function_list gclp}; }
+    q{ran bin/npg_pipeline_post_qc_review with gclp function list};
+  ok(!$CHILD_ERROR, qq{Return code of $CHILD_ERROR});
+
+  lives_ok { diag qx{
+    perl $bin/npg_pipeline_post_qc_review --runfolder_path $tmp_dir/nfs/sf45/IL2/analysis/123456_IL2_1234  --function_list some}; }
+    q{ran bin/npg_pipeline_post_qc_review with non-exisitng function list};
+  ok($CHILD_ERROR, qq{Child error $CHILD_ERROR});
 }
 
 {
@@ -67,4 +84,3 @@ my $bin = $curdir . q[/bin];
 }
 
 1;
-
