@@ -57,16 +57,19 @@ package main;
   my $prefix = $runner->daemon_conf()->{command_prefix};
   like($runner->_generate_command(1234), qr/;\s*\Q$prefix\Enpg_pipeline_/,
     q{generated command is correct});
-  like($runner->_generate_command(1234), qr/npg_pipeline_post_qc_review --verbose --runfolder_path \/some\/path/,
+  like($runner->_generate_command(1234),
+    qr/npg_pipeline_post_qc_review --verbose --runfolder_path \/some\/path/,
     q{generated command is correct});
-  like($runner->_generate_command(1234,1), qr/npg_pipeline_post_qc_review --gclp --verbose --runfolder_path \/some\/path/,
+  like($runner->_generate_command(1234,1),
+    qr/npg_pipeline_post_qc_review --function_list gclp --verbose --runfolder_path \/some\/path/,
     q{generated gclp command is correct});
   ok(!$runner->green_host, 'host is not in green datacentre');
 
   $schema->resultset(q[Run])->find(2)->update_run_status('archival pending', 'pipeline');
   $schema->resultset(q[Run])->find(3)->update_run_status('archival pending', 'pipeline');
   my @test_runs = ();
-  lives_ok { @test_runs = $runner->runs_with_status('archival pending') } 'can get runs with analysys pending status';
+  lives_ok { @test_runs = $runner->runs_with_status('archival pending') }
+    'can get runs with analysys pending status';
   ok(scalar @test_runs >= 3, 'at least three runs are archival pending');
   foreach my $id (qw/2 3 1234/) {
     ok((any {$_->id_run == $id} @test_runs), "run $id correctly identified as archival pending");
@@ -75,7 +78,8 @@ package main;
 
 {
   $schema->resultset(q[Run])->find(2)->update({'folder_path_glob'=> 'sf26',});
-  is($schema->resultset(q[Run])->find(2)->folder_path_glob(), 'sf26', 'run 2 updated to be in red room');
+  is($schema->resultset(q[Run])->find(2)->folder_path_glob(), 'sf26',
+    'run 2 updated to be in red room');
   is($schema->resultset(q[Run])->find(3)->folder_path_glob(), undef,
     'run 3 folder path glob undefined, will never match any host');
   my $runner = test_archival_runner->new(
